<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="gvl_HA" Id="{e167e504-1347-4467-a869-b93c10de4cef}">
    <Declaration><![CDATA[VAR_GLOBAL
(*-----------------------------------------------
Dieser Bereich wird zur Deklaration von Variablen verwendet,
welche durch HA angesprochen werden müssen, das eine Umrechnung des HA-Wertes
für die eigentliche Ausgabe an den Klemmen erfolgen muss.
-------------------------------------------------*)

//-------------------------SECURITY-------------------------------------------------------
//########################################################################################
bSecAl_All			:BOOL := FALSE;		//Aktiviert alle Alarmfunktionen

bSecAl_LightAll		:BOOL := FALSE;		//Aktiviert dauerhaft alle Lichter
bSecAl_LightIn		:BOOL := FALSE;		//Aktiviert dauerhaft alle Lichter Innen
bSecAl_LightOut		:BOOL := FALSE;		//Aktiviert dauerhaft alle Lichter Aussen

bSecAL_NoisAll		:BOOL := FALSE;		//Aktiviert dauerhaft alle Alarmsignale
bSecAl_NoisIn		:BOOL := FALSE;		//Aktiviert dauerhaft alle Alarmsignale Innen
bSecAl_NoisOut		:BOOL := FALSE;		//Aktiviert dauerhaft alle Alarmsingale Aussen
//----------------------------------------------------------------------------------------

	//UMGEBUNGSVARIABLEN
	bENV_NoDaylight	AT	%Q*:BOOL;	//Wird von HA auf tru gesetzt bei Sonnenuntergang

	//BELEUCHTUNG ESSZIMMER
	bOD01_2_Test		: BOOL;	//Esszimmer Sec Test
	
	//BELEUCHTUNG WOHNZIMMER
	bOD01_3_Test		: BOOL;	//Wohnzimmer Sec Test
	
	bOD01_5			: BOOL;		//Licht Hausgang
	
	//STECKDOSE FERNSEHER
	bOD02_6		AT  %Q*:BOOL := TRUE;
	
	//Invertierte Eingänge bei Fensterkontakte
	bID24_01_3		AT	%I*:BOOL;	// Fensterkontakt Bad EG
	bID24_01_4		AT	%I*:BOOL;	// Fensterkontakt Büro
	bID24_02_1		AT	%I*:BOOL;	// Fensterkontakt Keller
	bID24_02_2		AT	%I*:BOOL;	// Fensterkontakt Technik
	bID24_02_3		AT	%I*:BOOL;	// Fensterkontakt Hobbyraum Süd
	bID24_02_4		AT	%I*:BOOL;	// Kontakt Terassentür UG
	bID24_03_1		AT	%I*:BOOL;	// Fensterkontakt Hobbyraum West
	bID24_03_2		AT	%I*:BOOL;	// Türkontakt Balkontür EG
	bWID01_3		AT	%I*:BOOL;	// Türkontakt Werkstatt
	bWID01_4		AT	%I*:BOOL;	// Fensterkontakt Werkstatt
	
	//BELEUCHTUNG ESSZIMMER TISCH
	iOADim01		AT	%Q*:INT;	// Dimmer Esszimmerlampe
	bODDim01		AT	%Q*:BOOL;	// Esszimmerlampe
	bODDim01_Test			:BOOL;	// Testvariable für Sec Modus
	
	//BELEUCHTUNG BALKON
	bODDim02_Test			:BOOL;	// Testvariable für Sec Modus
	
	//TEMPERATUR USW WOHNZIMMER
	iIAV01_1		AT	%I*:INT;	// Temperatur Wohnzimmer (°C)
	iIAV01_2		AT	%I*:INT;	// Feuchtigkeit Wohnzimmer (%)
	iIAV01_3		AT	%I*:INT;	// CO2 Wohnzimmer (ppm)
	
	//TEMPERATUR USW TECHNIKRAUM
	iIAV01_4		AT	%I*:INT;	// Temperatur Technkikraum (°C)
	iIAV02_1		AT	%I*:INT;	// Feuchtigkeit Technikraum (%)
	
	//Temperatur BÜHNE
	iIAPT_01_1		AT	%I*:INT;
	
	//HAUSTÜR TÜRÖFFNER
	bHaustuerOeffnerImpuls	AT	%Q*:BOOL;	// Impulsausgang Hautür Öffner
	bHaustuerOeffnerDauer	AT	%Q*:BOOL;	// Dauerausgang Haustür Öffner
	
	//ZISTERNE
	iIAA01_1			AT	%I*:INT;			//Füllstand Zisterne (4-20mA)
	iIAA01_1_Proz		AT	%I*:INT;			//Füllstand Zisterne (Prozent)
	iIAA01_1_Liter		AT	%I*:INT;			//Füllstand Zisterne (Liter)
	
	//Vitramo Bad OG
	bOD04_4				AT	%Q*:BOOL;			//Vitramo Bad OG
	
	//BELEUCHTUNG WERKSTATT
	bWOD01_1			AT	%Q*:BOOL;			//Beleuchtung Werkstatt
	bWOD01_2					:BOOL;			//Steckdosen Werkstatt
	
	//TEMPERATUR USW WERKSTATT
	iWIAV01_1		AT	%I*:INT;				// Temperatur Wohnzimmer (-30 - +70 °C)
	iWIAV01_2		AT	%I*:INT;				// Feuchtigkeit Wohnzimmer (%)
	
	//GARAGENTOR
	bWOD01_6 		:BOOL;
	
	//TÜRGONG
	bOD02_3			:BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>